Fix skeleton layout jumping in pool detail page

--- a/frontend/src/app/components/pool/pool.component.scss
+++ b/frontend/src/app/components/pool/pool.component.scss
@@ -42,7 +42,6 @@ div.scrollable {
 .skeleton-loader {
   width: 100%;
   max-width: 90px;
-  margin: 15px auto 3px;
 }
 
 .table {
